build: animation completed

--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
 <body>
     <section class="w-full h-screen flex">
         <div class="relative w-1/2">
-            <div class="fixed w-1/2 bg-mycolor-100 h-screen flex items-center">
+            <div class="fixed slide bg-mycolor-100 h-screen flex items-center">
                 <div class="p-14 ">
                     <div class="mb-16">
                         <img src="./assets/images/logo-white.svg" alt="" width="100px">
                     </div>
                     <div>
                         <h1
-                            class="text-white text-4xl size font-medium max-w-3xl leading-normal mb-6">
+                            class="text-white gentle text-4xl size font-medium max-w-3xl leading-normal mb-6">
                             Hello. I'm a freelance user interface developer.
                         </h1>
     
                         <p
-                            class="text-white text-sm leading-5 font-normal max-w-md mb-8">
+                            class="text-white gentle text-sm leading-5 font-normal max-w-md mb-8">
                             My name is Muhammad A.Quadir. I craft user interfaces using modern 
                             frontend web technologies.
                         </p>
     
                         <div class="my-20">
                             <a href="#"
-                                class="text-white font-medium p-4 rounded-full border-2 border-white hover:text-mycolor-100 hover:bg-white">
+                                class="text-white gentle font-medium p-4 rounded-full border-2 border-white hover:text-mycolor-100 hover:bg-white">
                                 Let's work together!
                             </a>
                         </div>
 
                         <div>
-                            <p class="text-white text-sm font-light opacity-100"> Find me at <a class="text-white font-medium underline hover:no-underline opacity-100">Twitter</a>, <a class="text-white font-medium underline hover:no-underline opacity-100">Github</a> and <a class="text-white font-medium underline hover:no-underline opacity-100">LinkedIn</a></p>
-                            <p class="text-white text-sm font-light opacity-100">Download my <a class="text-white font-medium underline hover:no-underline opacity-100">resume</a></p>
+                            <p class="text-white gentle text-sm font-light opacity-100"> Find me at <a class="text-white font-medium underline hover:no-underline opacity-100">Twitter</a>, <a class="text-white font-medium underline hover:no-underline opacity-100">Github</a> and <a class="text-white font-medium underline hover:no-underline opacity-100">LinkedIn</a></p>
+                            <p class="text-white gentle text-sm font-light opacity-100">Download my <a class="text-white font-medium underline hover:no-underline opacity-100">resume</a></p>
                         </div>
                     </div> 
                 </div>
